# netz-analysis-engine

./: .dockerignore  .env.example  .geminiignore  .gitignore  .sec_seed_checkpoint.json  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  Netz_Wealth_Construcao_Portfolio.pptx  Procfile  compound-engineering.local.md  docker-compose.yml  massive_poc.py  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pr_body.md  providers.py  pyproject.toml  railway.toml  seed_dev_tenant.py  start-tunnel.ps1  temp_prompt.md  turbo.json
.gemini/agents/: api-contract-auditor.md  financial-timeseries-db-architect.md  svelte5-frontend-consistency.md  wealth-architect.md  wealth-echarts-specialist.md  wealth-platform-architect.md  wealth-portfolio-quant-architect.md  wealth-ux-flow-architect.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini
backend/ai_engine/: __init__.py  model_config.py  openai_client.py  profile_loader.py  vertical_registry.py
backend/app/: main.py
backend/manifests/: routes.json  workers.json
backend/quant_engine/: __init__.py  active_share_service.py  allocation_proposal_service.py  allocation_template_service.py  alternatives_analytics_service.py  attribution_service.py  backtest_service.py  benchmark_composite_service.py  black_litterman_service.py  block_coverage_service.py  cash_analytics_service.py  correlation_regime_service.py  cvar_service.py  data_commons_service.py  diversification_service.py  drawdown_service.py  drift_service.py  expense_ratio_validator.py  factor_model_ipca_service.py  factor_model_pca.py  factor_model_service.py  fiscal_data_service.py  fixed_income_analytics_service.py  fred_service.py  garch_service.py  lipper_service.py  macro_snapshot_builder.py  mandate_risk_aversion.py  monte_carlo_service.py  ofr_hedge_fund_service.py  optimizer_service.py  peer_comparison_service.py  peer_group_service.py  portfolio_correlation_service.py  portfolio_metrics_service.py  rebalance_service.py  regime_service.py  regional_macro_service.py  return_statistics_service.py  risk_budgeting_service.py  (+8 more)
backend/reports/: strategy_diff_p0.csv
backend/scripts/: _pr_a23_canonical_reference.py  _tmp_parse_lab_benchmarks.py  api_smoke.py  apply_strategy_reclassification.py  backfill_cusip_issuer_cik.py  backfill_expense_ratio_convention.py  backfill_fund_type.py  backfill_nav.py  backfill_nport_sector_tiingo.py  backfill_nport_series_id.py  backfill_primary_benchmark_from_fsds_history.py  backfill_primary_benchmark_from_rr1.py  backfill_primary_benchmark_from_tiingo.py  backfill_regime_history.py  backfill_screening_attrs.py  backfill_sec_cik.py  backfill_sec_etfs_strategy_label.py  backfill_strategy_label.py  backtest_regime_weights.py  benchmark_compare_latency.py  benchmark_compare_pre_phase4.py  benchmark_stability_phase4.py  bridge_mmf_catalog.py  bulk_extract_brochures.py  bulk_load_nport_holdings.py  bulk_load_rr1.py  check_coverage_direct.py  check_dupes.py  check_esma_tables.py  clean_fund_outliers.py  cleanup_dev_orphan_orgs.py  db_inventory.py  db_survey.py  debug_classifier.py  dev_seed_local.py  diagnose_nport_gics.py  explore_tiingo_benchmarks.py  fix_assets_index.py  generate_barchart_ticker_list.py  generate_manifests.py  (+57 more)
backend/tests/: conftest.py  e2e_smoke_test.py  test_active_share_service.py  test_ai_router_assembly.py  test_alerts_inbox.py  test_allocation_proposal_service.py  test_alt_scoring_dispatch.py  test_alt_scoring_integration.py  test_alternatives_analytics_service.py  test_analysis_holdings.py  test_analysis_peer.py  test_analysis_returns.py  test_analytical_capabilities_audit.py  (+181 more)
backups/: backup_pre_universe_cleanup_20260416_123004.sql.gz.sha256
docs/: netz-executive-overview-2026-03.md  netz-wealth-vertical-reference-2026-03.md  style-premium-refactor-summary.md  system-map.md
frontends/: eslint.config.js
infra/: check-runner-prereqs.ps1  setup-runner.ps1
scripts/: check-terminal-tokens-sync.mjs
tests/: SCREENER_SMOKE_CHECKLIST.md
todos/: 001-complete-p1-adls-sync-in-async.md  002-pending-p1-filename-sanitization-upload-url.md  003-complete-p2-privacy-allowlist-knowledge-aggregator.md  004-complete-p2-exception-detail-leaks.md  005-complete-p2-profile-loader-parallel-config.md  006-complete-p2-consolidate-profile-registries.md  007-complete-p2-document-sync-session-contract.md  008-complete-p2-adls-credential-validation.md  009-pending-p3-remove-yagni-base-interfaces.md  010-complete-p3-agent-system-prompt-stale.md  010-pending-p3-agent-system-prompt-stale.md  011-pending-p3-compact-json-knowledge-signals.md  012-complete-p2-memo-chapters-type-annotations.md  013-complete-p2-persist-chapter-redundant-json-dumps.md  014-complete-p2-delete-compress-to-budget-dead-code.md  015-complete-p2-service-duplicated-gap-extraction.md  016-complete-p3-market-data-type-checking-block.md  017-complete-p3-domain-ai-rename-engine-to-service.md  018-complete-p3-strengthen-import-linter-contracts.md  019-complete-p1-hardcoded-domain-credit.md  020-complete-p1-duplicate-skip-filter-governance.md  021-complete-p1-sync-download-bytes-blocks-loop.md  022-complete-p1-db-any-type-erasure.md  023-complete-p1-asyncio-run-in-orchestrator.md  024-complete-p1-nil-uuid-org-id-batch.md  025-complete-p1-fund-id-org-id-fallback.md  026-complete-p1-validate-extraction-bug.md  027-pending-p2-sequential-process-pending.md  028-complete-p2-gate-duplication-refactor.md  029-complete-p2-error-message-leakage.md  030-complete-p2-sse-tenant-isolation.md  031-complete-p3-missing-unit-tests.md  032-pending-p3-route-pydantic-schemas.md  062-complete-p1-cross-vertical-import-content-route.md  063-complete-p1-background-content-rls-bypass.md  064-complete-p1-returnmetrics-sharpe-mean-bug.md  065-complete-p2-extract-shared-content-pdf-renderer.md  066-complete-p2-fix-n-plus-1-monitoring-queries.md  067-complete-p2-deduplicate-backtest-computation.md  068-complete-p2-content-generation-backpressure.md  (+180 more)
worker_app/: function_app.py  knowledge_aggregator.py  outcome_recorder.py
(+2682 files in other folders)
