[project]
name = "netz-analysis-engine"
version = "0.1.0"
description = "Unified multi-tenant analysis engine for institutional investment verticals"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "redis>=5.2",
    "sse-starlette>=2.2",
    "PyJWT[crypto]>=2.10",
    "cryptography>=44.0",
    "httpx>=0.28",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
    "import-linter>=2.1",
]
ai = [
    "openai>=1.60",
    "numpy>=2.0",
    "scikit-learn>=1.6",
]
reranker = [
    "sentence-transformers>=3.0,<4.0",
    "torch>=2.2",
]
quant = [
    "numpy>=2.0",
    "scipy>=1.14",
    "cvxpy>=1.5",
    "yfinance>=0.2",
    "statsmodels>=0.14",
    "scikit-learn>=1.6",
]
edgar = [
    "edgartools>=5.23,<6.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend", "."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]
# UP (pyupgrade) disabled temporarily — migrated code has many UP038/UP017 issues
# Re-enable after Sprint 2b async adaptation is complete
ignore = [
    "E501",   # Line too long
    "B008",   # Depends() in defaults — correct FastAPI pattern
    "B904",   # raise from — migrated code, fix incrementally
    "E712",   # == True comparisons — migrated code, fix incrementally
    "E731",   # lambda assignment — migrated code
    "E741",   # ambiguous variable name — migrated code
    "SIM102", # nested if — migrated code
    "SIM108", # ternary — migrated code, fix incrementally
    "SIM117", # nested with — migrated code, fix incrementally
    "SIM103", # return condition directly — migrated code
    "SIM105", # contextlib.suppress — migrated code
    "SIM110", # use all/any — migrated code
    "SIM116", # use dict instead of if chain — migrated code
    "E402",   # import not at top — intentional lazy imports in workers
    "F841",   # unused variable — migrated code, fix incrementally
    "B007",   # unused loop variable — migrated code
    "B019",   # lru_cache on method — migrated code
    "F821",   # undefined name — session factory refs, resolved in Sprint 2b async adaptation
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["redis.*", "sse_starlette.*", "edgar.*", "rapidfuzz.*"]
ignore_missing_imports = true

# ── Import architecture enforcement (import-linter) ──────────────────
[tool.importlinter]
root_packages = ["vertical_engines", "quant_engine", "app"]

[[tool.importlinter.contracts]]
name = "Verticals must not import each other"
type = "independence"
modules = [
    "vertical_engines.credit",
    "vertical_engines.wealth",
]

# Narrow guard: models must never import service (strongest DAG invariant).
# Covers all 12 Wave 1 packages (critic, deal_conversion, domain_ai, edgar,
# kyc, market_data, memo, pipeline, portfolio, quant, retrieval, sponsor).
[[tool.importlinter.contracts]]
name = "Engine models must not import service"
type = "forbidden"
source_modules = ["vertical_engines.credit.*.models"]
forbidden_modules = ["vertical_engines.credit.*.service"]

# Broad guard: ALL domain helpers (parser, classifier, prompts, etc.) must not
# import service.  service.py is the package entry-point and may import helpers,
# but helpers must never depend back on service.  Uses allow_indirect_imports to
# avoid "shared descendants" errors from package overlap.
[[tool.importlinter.contracts]]
name = "Domain helpers must not import service within packages"
type = "forbidden"
source_modules = ["vertical_engines.credit.*"]
forbidden_modules = ["vertical_engines.credit.*.service"]
allow_indirect_imports = "true"
ignore_imports = [
    "vertical_engines.credit.* -> vertical_engines.credit.*.service",
]
unmatched_ignore_imports_alerting = "warn"

# Phase A ratchet (bdabdc8): regime + cvar are vertical-agnostic.
# Other quant services still depend on app.domains.wealth — subsequent phases.
[[tool.importlinter.contracts]]
name = "Vertical-agnostic quant services must not import wealth domain models"
type = "forbidden"
source_modules = ["quant_engine.regime_service", "quant_engine.cvar_service"]
forbidden_modules = ["app.domains.wealth"]
