[project]
name = "netz-analysis-engine"
version = "0.1.0"
description = "Unified multi-tenant analysis engine for institutional investment verticals"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "redis>=5.2",
    "sse-starlette>=2.2",
    "PyJWT[crypto]>=2.10",
    "cryptography>=44.0",
    "httpx>=0.28",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "nh3>=0.2.0",
    "pgvector>=0.4",
    "cachetools>=5.3",
    "python-dateutil>=2.9",
    "pandas>=2.2",
    "python-multipart>=0.0.9",
    "reportlab>=4.1",
    "matplotlib>=3.9",
    "boto3>=1.35",
    "arch>=7.0",
    "aeon>=0.11",
    "pandas-ta>=0.4.67b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
    "import-linter>=2.1",
]
ai = [
    "openai>=1.60",
    "numpy>=2.0",
    "scikit-learn>=1.6",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "sentence-transformers>=3.0,<4.0",
    "torch>=2.2",
]
quant = [
    "numpy>=2.0",
    "scipy>=1.14",
    "cvxpy>=1.5",
    "yfinance>=0.2",
    "statsmodels>=0.14",
    "scikit-learn>=1.6",
    "datacommons-client[Pandas]>=1.0",
    "arch>=7.0",
]
edgar = [
    "edgartools>=5.23,<6.0",
    "rapidfuzz>=3.0,<4.0",
]

[tool.setuptools.packages.find]
where = ["backend", "."]
include = ["app*", "ai_engine*", "vertical_engines*", "quant_engine*", "data_providers*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]
pythonpath = ["backend", "."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:The garbage collector is trying to clean up non-checked-in connection:sqlalchemy.exc.SAWarning",
]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]
# UP (pyupgrade) disabled temporarily — migrated code has many UP038/UP017 issues
# Re-enable after Sprint 2b async adaptation is complete
ignore = [
    "E501",   # Line too long
    "B008",   # Depends() in defaults — correct FastAPI pattern
    "B904",   # raise from — migrated code, fix incrementally
    "E712",   # == True comparisons — migrated code, fix incrementally
    "E731",   # lambda assignment — migrated code
    "E741",   # ambiguous variable name — migrated code
    "SIM102", # nested if — migrated code
    "SIM108", # ternary — migrated code, fix incrementally
    "SIM117", # nested with — migrated code, fix incrementally
    "SIM103", # return condition directly — migrated code
    "SIM105", # contextlib.suppress — migrated code
    "SIM110", # use all/any — migrated code
    "SIM116", # use dict instead of if chain — migrated code
    "E402",   # import not at top — intentional lazy imports in workers
    "F841",   # unused variable — migrated code, fix incrementally
    "B007",   # unused loop variable — migrated code
    "B019",   # lru_cache on method — migrated code
    "F821",   # undefined name — session factory refs, resolved in Sprint 2b async adaptation
]

[tool.mypy]
python_version = "3.12"
mypy_path = "backend"
explicit_package_bases = true
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["redis.*", "sse_starlette.*", "edgar.*", "rapidfuzz.*", "pyarrow.*", "duckdb.*", "pgvector.*", "yfinance.*"]
ignore_missing_imports = true

# ── Import architecture enforcement (import-linter) ──────────────────
[tool.importlinter]
root_packages = ["vertical_engines", "quant_engine", "app", "data_providers", "ai_engine"]

[[tool.importlinter.contracts]]
name = "Verticals must not import each other"
type = "independence"
modules = [
    "vertical_engines.credit",
    "vertical_engines.wealth",
]

# Narrow guard: models must never import service (strongest DAG invariant).
# Covers all 12 Wave 1 packages (critic, deal_conversion, domain_ai, edgar,
# kyc, market_data, memo, pipeline, portfolio, quant, retrieval, sponsor).
[[tool.importlinter.contracts]]
name = "Engine models must not import service"
type = "forbidden"
source_modules = ["vertical_engines.credit.*.models"]
forbidden_modules = ["vertical_engines.credit.*.service"]

# Broad guard: ALL domain helpers (parser, classifier, prompts, etc.) must not
# import service.  service.py is the package entry-point and may import helpers,
# but helpers must never depend back on service.  Uses allow_indirect_imports to
# avoid "shared descendants" errors from package overlap.
[[tool.importlinter.contracts]]
name = "Domain helpers must not import service within packages"
type = "forbidden"
source_modules = ["vertical_engines.credit.*"]
forbidden_modules = ["vertical_engines.credit.*.service"]
allow_indirect_imports = "true"
ignore_imports = [
    "vertical_engines.credit.* -> vertical_engines.credit.*.service",
]
unmatched_ignore_imports_alerting = "warn"

# Deep review internal DAG: 5-tier architecture enforced as layers.
# models (leaf) → domain modules → persist → portfolio → service (top).
[[tool.importlinter.contracts]]
name = "Deep review internal DAG"
type = "layers"
layers = [
    "service",
    "portfolio",
    "persist",
    "corpus | prompts | policy | decision | confidence",
    "helpers",
    "models",
]
containers = [
    "vertical_engines.credit.deep_review",
]
exhaustive = true
exhaustive_ignores = [
    "__init__",
]

# ── Wealth vertical contracts (mirrors credit contracts above) ────────

# Narrow guard: models must never import entry-point modules.
# Covers critic (service.py) — the only wealth package using the credit naming.
[[tool.importlinter.contracts]]
name = "Wealth models must not import service (critic)"
type = "forbidden"
source_modules = ["vertical_engines.wealth.critic.models"]
forbidden_modules = ["vertical_engines.wealth.critic.service"]

# Broad guard: wealth critic helpers must not import service.
[[tool.importlinter.contracts]]
name = "Wealth critic helpers must not import service"
type = "forbidden"
source_modules = [
    "vertical_engines.wealth.critic.parser",
    "vertical_engines.wealth.critic.prompt_builder",
]
forbidden_modules = ["vertical_engines.wealth.critic.service"]

# DD report: models must not import engine entry-point.
[[tool.importlinter.contracts]]
name = "Wealth dd_report models must not import engine"
type = "forbidden"
source_modules = ["vertical_engines.wealth.dd_report.models"]
forbidden_modules = ["vertical_engines.wealth.dd_report.dd_report_engine"]

# DD report: helpers must not import engine entry-point.
[[tool.importlinter.contracts]]
name = "Wealth dd_report helpers must not import engine"
type = "forbidden"
source_modules = [
    "vertical_engines.wealth.dd_report.chapters",
    "vertical_engines.wealth.dd_report.confidence_scoring",
    "vertical_engines.wealth.dd_report.evidence_pack",
    "vertical_engines.wealth.dd_report.quant_injection",
    "vertical_engines.wealth.dd_report.peer_injection",
]
forbidden_modules = ["vertical_engines.wealth.dd_report.dd_report_engine"]

# Fact sheet: models must not import engine entry-point.
[[tool.importlinter.contracts]]
name = "Wealth fact_sheet models must not import engine"
type = "forbidden"
source_modules = ["vertical_engines.wealth.fact_sheet.models"]
forbidden_modules = ["vertical_engines.wealth.fact_sheet.fact_sheet_engine"]

# Fact sheet: helpers must not import engine entry-point.
[[tool.importlinter.contracts]]
name = "Wealth fact_sheet helpers must not import engine"
type = "forbidden"
source_modules = [
    "vertical_engines.wealth.fact_sheet.chart_builder",
    "vertical_engines.wealth.fact_sheet.executive_renderer",
    "vertical_engines.wealth.fact_sheet.institutional_renderer",
    "vertical_engines.wealth.fact_sheet.i18n",
]
forbidden_modules = ["vertical_engines.wealth.fact_sheet.fact_sheet_engine"]

# Asset universe: models must not import service entry-point.
[[tool.importlinter.contracts]]
name = "Wealth asset_universe models must not import service"
type = "forbidden"
source_modules = ["vertical_engines.wealth.asset_universe.models"]
forbidden_modules = ["vertical_engines.wealth.asset_universe.universe_service"]

# Asset universe: helpers must not import service entry-point.
[[tool.importlinter.contracts]]
name = "Wealth asset_universe helpers must not import service"
type = "forbidden"
source_modules = [
    "vertical_engines.wealth.asset_universe.fund_approval",
]
forbidden_modules = ["vertical_engines.wealth.asset_universe.universe_service"]

# Model portfolio: models must not import helpers (no entry-point service,
# but models should remain a leaf node).
[[tool.importlinter.contracts]]
name = "Wealth model_portfolio models must not import helpers"
type = "forbidden"
source_modules = ["vertical_engines.wealth.model_portfolio.models"]
forbidden_modules = [
    "vertical_engines.wealth.model_portfolio.portfolio_builder",
    "vertical_engines.wealth.model_portfolio.stress_scenarios",
    "vertical_engines.wealth.model_portfolio.track_record",
]

# Vertical-agnostic quant services: all 16 covered. DB queries that previously
# lived in quant_engine were extracted to app.domains.wealth.services.quant_queries.
[[tool.importlinter.contracts]]
name = "Vertical-agnostic quant services must not import wealth domain models"
type = "forbidden"
source_modules = [
    "quant_engine.regime_service",
    "quant_engine.cvar_service",
    "quant_engine.attribution_service",
    "quant_engine.fred_service",
    "quant_engine.portfolio_metrics_service",
    "quant_engine.regional_macro_service",
    "quant_engine.stress_severity_service",
    "quant_engine.talib_momentum_service",
    "quant_engine.backtest_service",
    "quant_engine.drift_service",
    "quant_engine.optimizer_service",
    "quant_engine.peer_comparison_service",
    "quant_engine.rebalance_service",
    "quant_engine.scoring_service",
    "quant_engine.fiscal_data_service",
    "quant_engine.ofr_hedge_fund_service",
    "quant_engine.data_commons_service",
]
forbidden_modules = ["app.domains.wealth", "app.domains.credit"]

[[tool.importlinter.contracts]]
name = "Wealth engine models must not import service"
type = "forbidden"
source_modules = [
    "vertical_engines.wealth.dd_report.models",
    "vertical_engines.wealth.dd_report.evidence_pack",
    "vertical_engines.wealth.dd_report.confidence_scoring",
    "vertical_engines.wealth.critic.models",
    "vertical_engines.wealth.asset_universe.models",
    "vertical_engines.wealth.model_portfolio.models",
    "vertical_engines.wealth.fact_sheet.models",
    "vertical_engines.wealth.rebalancing.models",
    "vertical_engines.wealth.watchlist.models",
    "vertical_engines.wealth.mandate_fit.models",
    "vertical_engines.wealth.fee_drag.models",
    "vertical_engines.wealth.attribution.models",
    "vertical_engines.wealth.correlation.models",
    "vertical_engines.wealth.monitoring.strategy_drift_models",
]
forbidden_modules = [
    "vertical_engines.wealth.dd_report.dd_report_engine",
    "vertical_engines.wealth.critic.service",
    "vertical_engines.wealth.asset_universe.universe_service",
    "vertical_engines.wealth.fact_sheet.fact_sheet_engine",
    "vertical_engines.wealth.screener.service",
    "vertical_engines.wealth.rebalancing.service",
    "vertical_engines.wealth.watchlist.service",
    "vertical_engines.wealth.mandate_fit.service",
    "vertical_engines.wealth.fee_drag.service",
    "vertical_engines.wealth.attribution.service",
    "vertical_engines.wealth.correlation.service",
    "vertical_engines.wealth.monitoring.strategy_drift_scanner",
]

[[tool.importlinter.contracts]]
name = "Wealth domain helpers must not import service within packages"
type = "forbidden"
source_modules = [
    "vertical_engines.wealth.dd_report.chapters",
    "vertical_engines.wealth.dd_report.quant_injection",
    "vertical_engines.wealth.critic.parser",
    "vertical_engines.wealth.critic.prompt_builder",
    "vertical_engines.wealth.asset_universe.fund_approval",
    "vertical_engines.wealth.model_portfolio.portfolio_builder",
    "vertical_engines.wealth.model_portfolio.track_record",
    "vertical_engines.wealth.model_portfolio.stress_scenarios",
    "vertical_engines.wealth.fact_sheet.executive_renderer",
    "vertical_engines.wealth.fact_sheet.institutional_renderer",
    "vertical_engines.wealth.fact_sheet.chart_builder",
    "vertical_engines.wealth.screener.layer_evaluator",
    "vertical_engines.wealth.screener.quant_metrics",
    "vertical_engines.wealth.peer_group.peer_matcher",
    "vertical_engines.wealth.rebalancing.impact_analyzer",
    "vertical_engines.wealth.rebalancing.weight_proposer",
    "vertical_engines.wealth.watchlist.transition_detector",
    "vertical_engines.wealth.mandate_fit.constraint_evaluator",
]
forbidden_modules = [
    "vertical_engines.wealth.dd_report.dd_report_engine",
    "vertical_engines.wealth.critic.service",
    "vertical_engines.wealth.asset_universe.universe_service",
    "vertical_engines.wealth.fact_sheet.fact_sheet_engine",
    "vertical_engines.wealth.screener.service",
    "vertical_engines.wealth.peer_group.service",
    "vertical_engines.wealth.rebalancing.service",
    "vertical_engines.wealth.watchlist.service",
    "vertical_engines.wealth.mandate_fit.service",
    "vertical_engines.wealth.fee_drag.service",
]

[[tool.importlinter.contracts]]
name = "Wealth screener models must not import screener service"
type = "forbidden"
source_modules = ["vertical_engines.wealth.screener.models"]
forbidden_modules = ["vertical_engines.wealth.screener.service"]

[[tool.importlinter.contracts]]
name = "Peer group helpers must not import peer group service"
type = "forbidden"
source_modules = [
    "vertical_engines.wealth.peer_group.peer_matcher",
]
forbidden_modules = ["vertical_engines.wealth.peer_group.service"]

[[tool.importlinter.contracts]]
name = "Peer group models must not import peer group service"
type = "forbidden"
source_modules = ["vertical_engines.wealth.peer_group.models"]
forbidden_modules = ["vertical_engines.wealth.peer_group.service"]

[[tool.importlinter.contracts]]
name = "Rebalancing models must not import rebalancing service"
type = "forbidden"
source_modules = ["vertical_engines.wealth.rebalancing.models"]
forbidden_modules = ["vertical_engines.wealth.rebalancing.service"]

[[tool.importlinter.contracts]]
name = "Rebalancing helpers must not import rebalancing service"
type = "forbidden"
source_modules = [
    "vertical_engines.wealth.rebalancing.impact_analyzer",
    "vertical_engines.wealth.rebalancing.weight_proposer",
]
forbidden_modules = ["vertical_engines.wealth.rebalancing.service"]

[[tool.importlinter.contracts]]
name = "Watchlist models must not import watchlist service"
type = "forbidden"
source_modules = ["vertical_engines.wealth.watchlist.models"]
forbidden_modules = ["vertical_engines.wealth.watchlist.service"]

[[tool.importlinter.contracts]]
name = "Watchlist helpers must not import watchlist service"
type = "forbidden"
source_modules = [
    "vertical_engines.wealth.watchlist.transition_detector",
]
forbidden_modules = ["vertical_engines.wealth.watchlist.service"]

[[tool.importlinter.contracts]]
name = "Mandate fit models must not import mandate fit service"
type = "forbidden"
source_modules = ["vertical_engines.wealth.mandate_fit.models"]
forbidden_modules = ["vertical_engines.wealth.mandate_fit.service"]

[[tool.importlinter.contracts]]
name = "Mandate fit helpers must not import mandate fit service"
type = "forbidden"
source_modules = [
    "vertical_engines.wealth.mandate_fit.constraint_evaluator",
]
forbidden_modules = ["vertical_engines.wealth.mandate_fit.service"]

[[tool.importlinter.contracts]]
name = "Fee drag models must not import fee drag service"
type = "forbidden"
source_modules = ["vertical_engines.wealth.fee_drag.models"]
forbidden_modules = ["vertical_engines.wealth.fee_drag.service"]

# ── Senior Analyst Engines (Sprint 6) ────────────────────────

# Strategy drift: models must not import scanner
[[tool.importlinter.contracts]]
name = "Wealth monitoring drift models must not import scanner"
type = "forbidden"
source_modules = ["vertical_engines.wealth.monitoring.strategy_drift_models"]
forbidden_modules = ["vertical_engines.wealth.monitoring.strategy_drift_scanner"]

# Attribution: models must not import service
[[tool.importlinter.contracts]]
name = "Wealth attribution models must not import service"
type = "forbidden"
source_modules = ["vertical_engines.wealth.attribution.models"]
forbidden_modules = ["vertical_engines.wealth.attribution.service"]

# Correlation: models must not import service
[[tool.importlinter.contracts]]
name = "Wealth correlation models must not import service"
type = "forbidden"
source_modules = ["vertical_engines.wealth.correlation.models"]
forbidden_modules = ["vertical_engines.wealth.correlation.service"]

# Correlation quant engine must not import wealth domain
[[tool.importlinter.contracts]]
name = "Correlation regime service must not import wealth domain"
type = "forbidden"
source_modules = ["quant_engine.correlation_regime_service"]
forbidden_modules = ["app.domains.wealth", "app.domains.credit"]

[[tool.importlinter.contracts]]
name = "Data providers must not import verticals or app domains or quant_engine or ai_engine"
type = "forbidden"
source_modules = ["data_providers"]
forbidden_modules = ["vertical_engines", "app.domains", "quant_engine", "ai_engine"]
